# stock-trader

./: .coveragerc  .gitignore  .pylintrc  Pipfile  README.md  app.py  celery_app.py  container.py  create  docker-compose.yml  openapi.py  pyproject.toml  pytest.ini
.github/workflows/: pytest.yml  python-publish.yml
config/: config.py  development.py  testing.py
core/: dispatcher.py
core/account/application/: __init__.py  sync_account_service.py
core/account/domain/: __init__.py  account.py  deposit.py
core/common/: exception.py
core/deposit/domain/: deposit.py  deposit_repository.py
core/holding/application/: __init__.py  sync_holding_summary_service.py
core/holding/domain/: __init__.py  holding.py  holding_summary.py
core/kiwoom/: connector.py
core/kiwoom/openapi/: client.py  response.py
core/stock/application/: crawl_daily_stock_service.py  crawl_daily_stock_summary_service.py  sync_stock_service.py
core/stock/domain/: stock.py  stock_connector.py  stock_crawler.py  stock_summary.py
core/summary/application/: __init__.py  delete_daily_stock_summary_service.py  sync_daily_stock_summary_service.py
core/summary/domain/: __init__.py  daily_stock_summary.py
core/user/domain/: user.py
scripts/: celery.bat
tasks/: securities_tasks.py  stock_summaries.py  stock_tasks.py  sync_stocks.py
tests/: conftest.py
tests/account/application/: test_sync_account_service.py
tests/kiwoom/: test_client.py  test_connector.py
tests/web/: conftest.py  test_app.py  utils.py
tests/web/stock/: test_views.py
web/admin/: admin.py
web/stock/: views.py
(+81 files in other folders)
