[tool.poetry]
name = "stock-trader"
version = "0.1.0"
description = ""
authors = ["amazingguni <amazingguni@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^2.7.0"
Flask-Login = "^0.5.0"
Flask-Cors = "^3.0.10"
dependency-injector = "^4.32.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
pylint = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
