[tool.poetry]
name = "stock-trader"
version = "0.1.0"
description = ""
authors = ["amazingguni <amazingguni@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^2.7.0"
Flask-Login = "^0.5.0"
Flask-Cors = "^3.0.10"
dependency-injector = "^4.32.2"
PyQt5 = "^5.15.4"
pandas = "^1.2.4"
pytz = "^2021.1"
mongoengine = "^0.23.1"
lxml = "^4.6.3"
Flask-Admin = "^1.5.8"
flask-mongoengine = "^1.0.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
pylint = "^2.8.2"
pytest = "^6.2.3"
mongomock = "^3.22.1"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
